Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18609

Incorrect rendering of disabled "checked" checkboxes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.15
    • Win32SS
    • None

    Description

      reactos-bootcd-0.4.15-dev-5327-gc8ef276-x86-gcc-lin-dbg

      Incorrect rendering of disabled "checked" checkboxes

      Should use "grey" (see WinXP, left) while it uses "black" (ReactOS 0.4.15, right)

      Code section of interest : https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/comctl32/button.c#l1628

      then

      https://git.reactos.org/?p=reactos.git;a=blob;f=win32ss/user/ntuser/draw.c#l746 where IntGetSysColor(COLOR_WINDOWTEXT) should only be used when enabled (and replaced by the correct "grey" when in disabled state) 

      With proposed patch :

      Attachments

        1. CheckBox_BotCompatible2.patch
          1 kB
        2. CheckBox.patch
          2 kB
        3. Classic_patched.png
          Classic_patched.png
          19 kB
        4. Classic_unpatched.png
          Classic_unpatched.png
          19 kB
        5. image-2022-11-06-10-46-08-195.png
          image-2022-11-06-10-46-08-195.png
          5 kB
        6. image-2022-11-06-14-27-21-319.png
          image-2022-11-06-14-27-21-319.png
          7 kB
        7. image-2022-11-06-18-05-19-152.png
          image-2022-11-06-18-05-19-152.png
          3 kB
        8. image-2022-11-06-18-06-33-649.png
          image-2022-11-06-18-06-33-649.png
          3 kB
        9. Luna_patched.png
          Luna_patched.png
          43 kB
        10. Luna_unpatched.png
          Luna_unpatched.png
          43 kB
        11. Lunar_patched.png
          Lunar_patched.png
          22 kB
        12. Lunar_unpatched.png
          Lunar_unpatched.png
          43 kB
        13. xpsp3_Luna.png
          xpsp3_Luna.png
          47 kB

        Activity

          People

            reactosfanboy reactosfanboy
            KRosUser KRosUser
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: