[WIN32SS] Classic Theme: disabled "checked" checkboxes should be grey CORE-18609

and not black, like they erroneously were.
This patch does not seem to have any impact on how they are rendered
for themed ros.